--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "ethers": "^3.0.26",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
+    "keythereum": "^1.0.4",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
     "zone.js": "0.8.26"
