--- a/package.json
+++ b/package.json
@@ -24,6 +24,9 @@
     "@ionic-native/splash-screen": "~4.10.0",
     "@ionic-native/status-bar": "~4.10.0",
     "@ionic/storage": "2.1.3",
+    "bip39": "^2.5.0",
+    "ethereumjs-util": "^5.2.0",
+    "ethereumjs-wallet": "^0.6.2",
     "ethers": "^3.0.26",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
