--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@ionic-native/core": "~4.10.0",
     "@ionic-native/splash-screen": "~4.10.0",
     "@ionic-native/status-bar": "~4.10.0",
-    "@ionic/storage": "2.1.3",
+    "@ionic/storage": "^2.1.3",
     "bip39": "^2.5.0",
     "ethereumjs-util": "^5.2.0",
     "ethereumjs-wallet": "^0.6.2",
