--- a/package.json
+++ b/package.json
@@ -24,11 +24,14 @@
     "@ionic-native/splash-screen": "~4.10.0",
     "@ionic-native/status-bar": "~4.10.0",
     "@ionic/storage": "2.1.3",
+    "@types/node": "^10.12.21",
+    "ethereumjs-tx": "^1.3.7",
     "ethers": "^3.0.26",
     "ionic-angular": "3.9.2",
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
+    "web3": "^1.0.0-beta.41",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
