--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "ionicons": "3.0.0",
     "rxjs": "5.5.11",
     "sw-toolbox": "3.6.0",
-    "web3": "^1.0.0-beta.41",
+    "web3": "^0.20.6",
     "zone.js": "0.8.26"
   },
   "devDependencies": {
